- devtools.yaml: Change GPG key for Jenkins; - hosts: use private IPs; - deploy_docker/defaults/mail.yml: login/pass

--- a/playbooks/devtools.yaml
+++ b/playbooks/devtools.yaml
@@ -33,7 +33,7 @@
         state: present
         description: Official Jenkins Yum Repo
         baseurl: http://pkg.jenkins.io/redhat-stable
-        gpgkey: https://jenkins-ci.org/redhat/jenkins-ci.org.key
+        gpgkey: https://pkg.jenkins.io/redhat-stable/jenkins.io.key
         gpgcheck: yes
         enabled: yes
 
