--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,8 +8,6 @@ remote_user = ec2-user
 instance_user = ec2-user
 
 # ssh key
-private_key_file = /home/dell/.ssh/awskey-frankfurt
+private_key_file = /home/ec2-user/.ssh/awskey-frankfurt
 # skip fingerprint request
 host_key_checking = false
-
-roles_path = /home/dell/GraduationWork/roles
