--- a/qa_ci_docker.yml
+++ b/qa_ci_docker.yml
@@ -48,7 +48,8 @@
   tasks:
     - name: "Add devtools public key to {{ inventory_hostname }}:{{ ansible_host }} instance"
       authorized_key:
-        user: "{{ instance_user }}"
+        user: "ec2-user"
+        #user: "{{ instance_user }}"
         key: "{{ hostvars['devtools_aws_server'].DEVTOOLS_PUBLIC_KEY.stdout }}"
 
 
@@ -62,5 +63,6 @@
   tasks:
     - name: "add devtools public key to {{ inventory_hostname }}:{{ ansible_host }} instance"
       authorized_key:
-        user: "{{ instance_user }}"
+        user: "ec2-user"
+        # user: "{{ instance_user }}"
         key: "{{ hostvars['devtools_aws_server'].DEVTOOLS_PUBLIC_KEY.stdout }}"
