--- a/roles/build_docker/defaults/main.yml
+++ b/roles/build_docker/defaults/main.yml
@@ -8,7 +8,7 @@ NEXUS_SERVER_PORT: 8081
 NEXUS_DOCKER_PORT: 5000
 MAVEN_REPOSITORY: maven-repository
 MAVEN_LOGIN: admin
-MAVEN_PASSWORD: 1596321
+MAVEN_PASSWORD: 159632
 MAVEN_GROUPID: java
 MAVEN_ARTIFACTID: spring-boot-smoke-test-web-ui
 MAVEN_EXTENTION: jar
