--- a/roles/deploy_docker/defaults/main.yml
+++ b/roles/deploy_docker/defaults/main.yml
@@ -6,7 +6,7 @@ NEXUS_SERVER_IP: "{{ devtools_aws_server_local }}"
 NEXUS_DOCKER_PORT: 5000
 #MAVEN_REPOSTITORY: docker-repository
 MAVEN_LOGIN: admin
-MAVEN_PASSWORD: 1596321
+MAVEN_PASSWORD: 159632
 
 DOCKER_GROUP: docker
 DOCKER_USER: docker
