--- a/roles/deploy_docker/defaults/main.yml
+++ b/roles/deploy_docker/defaults/main.yml
@@ -2,10 +2,9 @@
 # defaults for deploy_docker role
 
 # local IP for Devtools instance
-NEXUS_SERVER_IP: "10.0.1.101"
-# "{{ devtools_aws_server_local }}"
+NEXUS_SERVER_IP: "{{ devtools_aws_server }}"
 NEXUS_DOCKER_PORT: 5000
-#MAVEN_REPOSTITORY: docker-repository
+
 MAVEN_LOGIN: admin
 MAVEN_PASSWORD: 159632
 
