--- a/roles/deploy_jar/defaults/main.yml
+++ b/roles/deploy_jar/defaults/main.yml
@@ -2,8 +2,7 @@
 # defaults file for deploy_jar role
 
 # local ip for DevTools instance
-NEXUS_SERVER_IP: "10.0.1.101"
-#"{{ devtools_aws_server_local }}"
+NEXUS_SERVER_IP: "{{ devtools_aws_server }}"
 NEXUS_SERVER_PORT: 8081
 MAVEN_REPOSTITORY: maven-repository
 MAVEN_GROUPID: java
