--- a/roles/deploy_jar/defaults/main.yml
+++ b/roles/deploy_jar/defaults/main.yml
@@ -1,9 +1,11 @@
 ---
 # defaults file for deploy_jar role
 
-# local ip for DevTools instance
-NEXUS_SERVER_IP: "{{ devtools_aws_server }}"
+# private ip for DevTools instance
+NEXUS_SERVER_IP: "10.0.1.101"
+# NEXUS_SERVER_IP: "{{ devtools_aws_server }}"
 NEXUS_SERVER_PORT: 8081
+
 MAVEN_REPOSTITORY: maven-repository
 MAVEN_GROUPID: java
 MAVEN_ARTIFACTID: spring-boot-smoke-test-web-ui
