--- a/qa_ci_docker.yml
+++ b/qa_ci_docker.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: devtools
+- hosts: [devtools, worker]
   tasks:
     - name: Create .ssh directory for jenkins user
       become_user: jenkins
@@ -36,6 +36,19 @@
 
     - debug:
         msg: "{{ DEVTOOLS_PUBLIC_KEY.stdout }}"
+
+- hosts: worker
+  roles:
+    #install java-1.8.0
+    - { role: java8 }
+
+  become: true
+  tasks:
+    - name: "Add devtools public key to {{ inventory_hostname }}:{{ ansible_host }} instance"
+      authorized_key:
+        user: "ec2-user"
+        #user: "{{ instance_user }}"
+        key: "{{ hostvars['devtools_aws_server'].DEVTOOLS_PUBLIC_KEY.stdout }}"
 
 #- hosts: ['tag_Name_CI', 'tag_Name_QA']
 - hosts: deploy_artifact
